Исправляет ошибки линтера

--- a/project/package.json
+++ b/project/package.json
@@ -21,12 +21,14 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint"
+    "eslint": "eslint --ext .jsx --ext .js src/",
+    "test:eslint": "npm run eslint"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "htmlacademy/react"
     ]
   },
   "browserslist": {
@@ -40,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-htmlacademy": "4.0.1"
   }
 }
